Adding todays activities

--- a/Activities/Week 1-HTML, CSS, Git/Basic-Portfolio/contact.html
+++ b/Activities/Week 1-HTML, CSS, Git/Basic-Portfolio/contact.html
@@ -2,23 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Sanchez" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Contact - Hayley K</title>
 </head>
+<!-- HEADER -->
 <body>
-    <div class="wrapper">
-            <Section class="header">
-                <nav class="menu">
-                    <h1>Hayley K</h1>
-                    <ul class="rightNav">
-                        <li><a href="/contact.html">Contact</a></li>
-                        <li><a href="/portfolio.html">Portfolio</a></li>
-                        <li><a href="/index.html">About</a></li>
+        <header>
+            <div class="container">
+                <img class="logo" src="http://res.cloudinary.com/copper-consulting/image/upload/v1527691792/Mrs.-K---Name-Outlined.png"
+                        alt="logo">
+    
+                <nav>
+                    <ul>            
+                        <li class="hvr-shadow"><a href="index.html">About</a></li>
+                        <li class="hvr-shadow"><a href="portfolio.html">Portfolio</a></li>
+                        <li class="hvr-shadow"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-            </section>
+            </div>
+        </header>
 
+<!-- CONTACT -->
+    <div class="wrapper">
         <section class="Contact">
             <h2>Contact</h2>
             <hr>
@@ -35,6 +42,8 @@
             </form>
             
         </section>
+
+        <!-- FOOTER -->
         <section class="footer">
             <p>Designed by <a href="#">Hayley K.</a> &copy; 2018.  </p>
         </section>
