--- a/Activities/Week 2-CSS, Bootstrap/11-BootstrapDemo/Unsolved/bootstrap-buttons.html
+++ b/Activities/Week 2-CSS, Bootstrap/11-BootstrapDemo/Unsolved/bootstrap-buttons.html
@@ -23,6 +23,8 @@
 
   <meta charset="UTF-8">
   <title>Bootstrap DemoButtons</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+    crossorigin="anonymous">
 
 </head>
 
