--- a/Activities/Week 1-HTML, CSS, Git/Basic-Portfolio/index.html
+++ b/Activities/Week 1-HTML, CSS, Git/Basic-Portfolio/index.html
@@ -10,43 +10,54 @@
 </head>
 
 <!-- HEADER -->
+
 <body>
     <header>
         <div class="container">
-            <img class="logo" src="http://res.cloudinary.com/copper-consulting/image/upload/v1527691792/Mrs.-K---Name-Outlined.png"
-                    alt="logo">
+            <img class="logo" src="http://res.cloudinary.com/copper-consulting/image/upload/v1527691792/Mrs.-K---Name-Outlined.png" alt="logo">
 
             <nav>
-                <ul>            
-                    <li class="hvr-shadow"><a href="index.html">About</a></li>
-                    <li class="hvr-shadow"><a href="portfolio.html">Portfolio</a></li>
-                    <li class="hvr-shadow"><a href="contact.html">Contact</a></li>
+                <ul>
+                    <li class="hvr-shadow">
+                        <a href="index.html">About</a>
+                    </li>
+                    <li class="hvr-shadow">
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="hvr-shadow">
+                        <a href="contact.html">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
-    
 
-<!-- ABOUT HAYLEY -->
+
+    <!-- ABOUT HAYLEY -->
     <div class="wrapper">
         <section class="about">
             <h2>About Me</h2>
             <hr>
             <img src="assets/images/HayleyK.jpg" alt="Hayley K.">
-            <p>Hayley K is a design-oriented front-end developer. She strives to build immersive and beautiful web applications through carefully crafted code and user-centred design.</p>
+            <p>Hayley K is a design-oriented front-end developer. She strives to build immersive and beautiful web applications
+                through carefully crafted code and user-centred design.</p>
             <br>
-            <p>Hayley's passion for design has been from childhood.  She would be often found creating.  Her passion for coding has developed to marry her passion of design and her love of digital art</p>
+            <p>Hayley's passion for design has been from childhood. She would be often found creating. Her passion for coding
+                has developed to marry her passion of design and her love of digital art</p>
             <br>
-            <p>Hayley is the owner of Copper Consulting, which is a full serve boutique agency providing web design, web development, graphic design and online business management.</p>
+            <p>Hayley is the owner of Copper Consulting, which is a full serve boutique agency providing web design, web development,
+                graphic design and online business management.</p>
             <br>
-            <p>When not online, Hayley can be found in Mississauga, Ontario with her husband, Alex — searching for the next show to binge on Netflix, trying out a new recipe in the kitchen, experimenting in gardening, or snuggling with their cats.</p>
+            <p>When not online, Hayley can be found in Mississauga, Ontario with her husband, Alex — searching for the next
+                show to binge on Netflix, trying out a new recipe in the kitchen, experimenting in gardening, or snuggling
+                with their cats.</p>
         </section>
 
-    <!-- FOOTER -->
-    <section class="footer">
-        <p>Designed by
-            <a href="#">Hayley K.</a> &copy; 2018. </p>
-    </section>
+        <!-- FOOTER -->
+        <section class="footer">
+            <p>Designed by
+                <a href="#">Hayley K.</a> &copy; 2018. </p>
+        </section>
 
     </div>
 
