--- a/Activities/Week 3-Javascript/03-PizzaVariables/Unsolved/pizza-variables.html
+++ b/Activities/Week 3-Javascript/03-PizzaVariables/Unsolved/pizza-variables.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Pizza Variables - Unsolved</title>
-  </head>
-  <body>
 
-    <script type="text/javascript">
+<head>
+  <meta charset="UTF-8">
+  <title>Pizza Variables - Unsolved</title>
+</head>
+
+<body>
+
+  <script type="text/javascript">
 
     // Instructions:
     // Create 3 variables. One called: "name", one called "pizzaCount", and one called "isHungry".
@@ -16,7 +18,9 @@
 
     // FILL IN YOUR CODE HERE
     // =============================================
-
+    var name = "Hayley";
+    var pizzaCount = 2;
+    var isHungry = true;
 
     // ==============================================
 
@@ -32,7 +36,8 @@
 
     alert("Still Hungry: " + isHungry);
 
-    </script>
+  </script>
 
-  </body>
+</body>
+
 </html>
