--- a/Activities/Week 3-Javascript/07-PromptSushi/Unsolved/prompt-sushi.html
+++ b/Activities/Week 3-Javascript/07-PromptSushi/Unsolved/prompt-sushi.html
@@ -8,17 +8,14 @@
 
 <body>
 
-  <!-- TO DO * Write JavaScript code that does the following:
-      * Using a confirm, ask the user, "Do you like \_?" Store their response in a variable.
-      * Using a prompt, ask the user, "What kind of \_ do you like?" Store their response in a variable.
-      * Alert both variables to the screen.
-     -->
+
+
 
   <script type="text/javascript">
 
     var likeSushi = confirm("Do you like sushi?");
     var answerSushi = prompt("What type of sushi do you like?")
-    var answer = alert(likeSushi + " " + answerSushi)
+    alert(likeSushi + " " + answerSushi)
 
   </script>
 
