working on the index page, added reset css

--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/index.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/reset.css">
+
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
@@ -39,18 +40,33 @@
   <div class="wrapper">
     <!-- HERO IMAGE -->
     <section class="bgimage">
-      <div class="container-fluid ">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h1 class="text-center">Hello, I’m Hayley</h1>
             <h3 class="text-center">a creatively inclined web designer</h3>
             <a href="#" class="btn btn-first btn-large shadow">Work's</a>
             <a href="#" class="btn btn-second btn-large shadow">Connect</a>
-            </p>
           </div>
         </div>
       </div>
     </section>
+    <!-- ABOUT HAYLEY BLURB -->
+    <section class="aboutHayley">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>It is so nice you are here</h2>
+            <p>My journey started with my love of design in highschool, but a university degree later and I was not in design.
+              Since then I have dabbled in an array of careers but I alway gravitate back to design. I start as a freelance
+              designer nearly 3 years ago, I've done remote work for agencies, consulted for startups, and collaborated with
+              talented people to create digital products for both businesses. I'm habitually learning new things to expand
+              my knowledge, hense the future title of Full Stack Developer.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- FEATURES -->
     <section class="features">
       <div class="container-fluid">
@@ -58,41 +74,51 @@
           <div class="col-md-1"></div>
           <div class="col-md-10">
             <div class="row">
-              <div class="feature-card col-md-3 text-center">
+              <div class="feature-card col-md-4 text-center">
                 <i>
-                  <img src="https://png.icons8.com/wired/100/000000/design.png">
+                  <img src="https://png.icons8.com/dotty/100/000000/design.png">
                 </i>
-                <h5>Design In Mind</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit voluptatum amet perspiciatis aut veritatis
-                  soluta nesciunt. Vitae voluptatibus, sapiente saepe aliquid est molestiae accusamus dicta?</p>
+                <h5>Designer</h5>
+                <p>I love simple clean designs which envoke emotions and thoughtful interactions</p>
+                <h5>I enjoy designing:</h5>
+                <p>Websites, Print Design, Logos</p>
+                <h5>My Design Tools:</h5>
+                <ul>
+                  <li>Adobe Suites</li>
+                  <li>Pen & Paper</li>
+                  <li>Figma</li>
+                  <li>Invision</li>
+                </ul>
               </div>
 
-              <div class="feature-card  col-md-3 text-center">
+              <div class="feature-card  col-md-4 text-center">
                 <i>
                   <img src="https://png.icons8.com/wired/100/000000/web-design.png">
                 </i>
-                <h5>Fully Responsive</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit voluptatum amet perspiciatis aut veritatis
-                  soluta nesciunt. Vitae voluptatibus, sapiente saepe aliquid est molestiae accusamus dicta?</p>
+                <h5>Front End Developer</h5>
+                <p>I tend to code things from scratch, and enjoy bringing the design to life in the browser.</p>
+                <h5>Languages I know</h5>
+                <p>HTML, CSS, Sass, JavaScript</p>
+                <h5>My Dev Tools:</h5>
+                <ul>
+                  <li>VS Code</li>
+                  <li>Bootstrap</li>
+                  <li>GitHub</li>
+                  <li>GitLab</li>
+                  <li>Terminal</li>
+                </ul>
               </div>
 
-              <div class="feature-card col-md-3 text-center">
+              <div class="feature-card col-md-4 text-center">
                 <i>
-                  <img src="https://png.icons8.com/dotty/100/000000/user-female.png">
+                  <img src="https://png.icons8.com/ios/100/000000/source-code.png">
                 </i>
-                <h5>User Friendly</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit voluptatum amet perspiciatis aut veritatis
-                  soluta nesciunt. Vitae voluptatibus, sapiente saepe aliquid est molestiae accusamus dicta?</p>
+                <h5>Back End Developer</h5>
+                <p>I will be learning all about back-end development and I am really looking forward to it.</p>
+                <h5>What I'll learn</h5>
+                <p>PHP, Ruby, Python, Java, MySQL</p>
               </div>
 
-              <div class="feature-card col-md-3 text-center">
-                <i>
-                  <img src="https://png.icons8.com/ios/100/000000/available-updates.png">
-                </i>
-                <h5>Free Updates</h5>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit voluptatum amet perspiciatis aut veritatis
-                  soluta nesciunt. Vitae voluptatibus, sapiente saepe aliquid est molestiae accusamus dicta?</p>
-              </div>
             </div>
           </div>
           <div class="col-md-1"></div>
@@ -100,17 +126,8 @@
       </div>
     </section>
 
-    <!-- EXMAPLES COMPUTER IMAGE -->
-    <section class="example_image">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <img style="width: 800px;" src="assets/images/Laptop.png" alt="Examples of the theme">
-          </div>
+    <!-- FOOTER -->
 
-        </div>
-      </div>
-    </section>
 
 
 
