Further progress - adding carousel for portfolio

--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/contact.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/contact.html
@@ -25,13 +25,13 @@
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">About Hayley</a>
+          <a class="nav-link active" href="/Bootstrap-Portfolio/index.html">About Hayley</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/contact.html">Contact</a>
+          <a class="nav-link" href="/Bootstrap-Portfolio/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
