--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/index.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/index.html
@@ -25,13 +25,13 @@
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" href="/index.html">About Hayley</a>
+          <a class="nav-link active" href="/Bootstrap-Portfolio/index.html">About Hayley</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="/Bootstrap-Portfolio/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -63,7 +63,7 @@
             <h1>It is so nice you're here</h1>
             <div class="row justify-content-md-start">
               <div class="col-md-4">
-                <img class="aboutHayleyImg" src="/assets/images/HayleyK.jpg" alt="">
+                <img class="aboutHayleyImg" src="/Bootstrap-Portfolio/assets/images/HayleyK.jpg" alt="">
               </div>
               <div class="col-md-8">
                 <p>My journey started with my love of design in highschool, but a university degree later and I was not in design.
