--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/portfolio.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/portfolio.html
@@ -25,13 +25,13 @@
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">About Hayley</a>
+          <a class="nav-link active" href="/Bootstrap-Portfolio/index.html">About Hayley</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact</a>
+          <a class="nav-link" href="/Bootstrap-Portfolio/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -55,21 +55,37 @@
         </div>
       </div>
     </section>
-    <!-- ABOUT HAYLEY BLURB -->
-    <section class="aboutHayley">
-      <div class="container-fluid">
-        <div class="row justify-content-md-center">
-          <div class="col-md-8">
-            <h1>It is so nice you're here</h1>
-            <p>My journey started with my love of design in highschool, but a university degree later and I was not in design.
-              Since then I have dabbled in an array of careers but I alway gravitate back to design. I start as a freelance
-              designer nearly 3 years ago, I've done remote work for agencies, consulted for startups, and collaborated with
-              talented people to create digital products for both businesses. I'm habitually learning new things to expand
-              my knowledge, hense the future title of Full Stack Developer.</p>
+    <!-- PORTFOLIO -->
+    <div class="section">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="/Bootstrap-Portfolio/assets/images/Adele-Video-Landing-Series---Mockup.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>TEST</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum iste dolore amet. Asperiores exercitationem,
+                voluptatibus eveniet, blanditiis expedita dolorum eaque enim, sapiente unde facere totam consequatur? Corrupti,
+                error placeat? Amet excepturi aperiam, suscipit aliquam mollitia iste, minima voluptates dolorum impedit
+                libero, corporis blanditiis eligendi velit.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/Bootstrap-Portfolio/assets/images/Annie-Tulk-Mockup.jpg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/Bootstrap-Portfolio/assets/images/placeholder-image.jpg" alt="Third slide">
           </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-    </section>
+    </div>
 
 
 
