--- a/Activities/Week 3-Javascript/2. Thursday/21-Events/events-examples.html
+++ b/Activities/Week 3-Javascript/2. Thursday/21-Events/events-examples.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Events!</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<head>
+  <meta charset="UTF-8">
+  <title>Events!</title>
 
-  </head>
-  <body>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+
+</head>
+
+<body>
+
   <body>
     <div class="container">
       <div class="row">
         <div class="col-md-offset-2 col-md-8">
           <div class="jumbotron">
-            <h2>You just typed <span id="user-text"><strong>...Nothing.</strong></span></h2>
+            <h2>You just typed
+              <span id="user-text">
+                <strong>...Nothing.</strong>
+              </span>
+            </h2>
           </div>
         </div>
       </div>
@@ -26,9 +33,10 @@
       var userText = document.getElementById("user-text");
 
       // Next, we give JavaScript a function to execute when onkeyup event fires.
-      document.onkeyup = function(event) {
-        userText.textContent = event.key;
+      document.onkeyup = function (event) {
+        var ans = event.key;
       };
     </script>
   </body>
+
 </html>
