--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/portfolio.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/portfolio.html
@@ -56,36 +56,40 @@
       </div>
     </section>
     <!-- PORTFOLIO -->
-    <div class="section">
-      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="/Bootstrap-Portfolio/assets/images/Adele-Video-Landing-Series---Mockup.jpg" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>TEST</h5>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum iste dolore amet. Asperiores exercitationem,
-                voluptatibus eveniet, blanditiis expedita dolorum eaque enim, sapiente unde facere totam consequatur? Corrupti,
-                error placeat? Amet excepturi aperiam, suscipit aliquam mollitia iste, minima voluptates dolorum impedit
-                libero, corporis blanditiis eligendi velit.</p>
+    <section class="portfolio">
+      <div class="row justify-content-md-center">
+        <div class="col-md-10">
+          <div class="row justify-content-md-center">
+            <!-- CARD 1 -->
+            <div class="col-md-3">
+              <div class="card">
+                <img class="card-img-top" src="/Bootstrap-Portfolio/assets/images/Adele-Video-Landing-Series---Mockup.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/Bootstrap-Portfolio/assets/images/Annie-Tulk-Mockup.jpg" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/Bootstrap-Portfolio/assets/images/placeholder-image.jpg" alt="Third slide">
+            <!-- CARD 2 -->
+            <div class="col-md-3">
+              <div class="card">
+                <img class="card-img-top" src="/Bootstrap-Portfolio/assets/images/Annie-Tulk-Mockup.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+
+
+
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
-    </div>
+
+    </section>
 
 
 
@@ -153,7 +157,7 @@
 
 
     <!-- DIV WRAPPER END -->
-  </div>
+    </section>
 
 
 </body>
