further work -- Media Queries

--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Responsive-Portfolio/index.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Responsive-Portfolio/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="container">
-            <img class="logo" src="http://res.cloudinary.com/copper-consulting/image/upload/v1527691792/Mrs.-K---Name-Outlined.png" alt="logo">
+            <img class="logo" src="/Responsive-Portfolio/assets/images/Mrs.-K---Name-Outlined.png" alt="logo">
 
             <nav>
                 <ul>
