--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/contact.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/contact.html
@@ -25,13 +25,13 @@
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" href="/Bootstrap-Portfolio/index.html">About Hayley</a>
+          <a class="nav-link" href="/index.html">About Hayley</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
+          <a class="nav-link" href="/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Bootstrap-Portfolio/contact.html">Contact</a>
+          <a class="nav-link active" href="/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -48,8 +48,8 @@
             <h3 class="text-center">a creatively inclined web designer
               <br>
               <br>
-              <a href="#" class="btn btn-first btn-large shadow">Work's</a>
-              <a href="#" class="btn btn-second btn-large shadow">Connect</a>
+              <a href="/portfolio.html" class="btn btn-first btn-large shadow">Work's</a>
+              <a href="/index.html" class="btn btn-second btn-large shadow">About Hayley</a>
             </h3>
           </div>
         </div>
@@ -60,12 +60,29 @@
       <div class="container-fluid">
         <div class="row justify-content-md-center">
           <div class="col-md-8">
-            <h1>It is so nice you're here</h1>
-            <p>My journey started with my love of design in highschool, but a university degree later and I was not in design.
-              Since then I have dabbled in an array of careers but I alway gravitate back to design. I start as a freelance
-              designer nearly 3 years ago, I've done remote work for agencies, consulted for startups, and collaborated with
-              talented people to create digital products for both businesses. I'm habitually learning new things to expand
-              my knowledge, hense the future title of Full Stack Developer.</p>
+            <h1>Thank you for stopping by!</h1>
+            <p>I would be happy to connect with you. Should you have any quesitons about my work or studies feel free to reach
+              out using the contact form below. We can also connect on social media.</p>
+            <!-- Facebook -->
+            <a href="https://www.facebook.com/HayleyJCSweet">
+              <img class="socialFooter" src="https://png.icons8.com/metro/50/ffffff/facebook.png">
+            </a>
+            <!-- Instagram -->
+            <a href="https://www.instagram.com/justhayleys/">
+              <img class="socialFooter" src="https://png.icons8.com/windows/50/ffffff/instagram-new.png">
+            </a>
+            <!-- Twitter -->
+            <a href="https://twitter.com/JustHayleyS">
+              <img class="socialFooter" src="https://png.icons8.com/metro/50/ffffff/twitter.png">
+            </a>
+            <!-- GitHub -->
+            <a href="https://github.com/CopperCo">
+              <img class="socialFooter" src="https://png.icons8.com/ios-glyphs/50/ffffff/github.png">
+            </a>
+            <!-- Email -->
+            <a href="mailto:mrs.kornilenko@gmail.com">
+              <img class="socialFooter" src="https://png.icons8.com/ios/50/ffffff/secured-letter.png">
+            </a>
           </div>
         </div>
       </div>
