--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/portfolio.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/portfolio.html
@@ -25,13 +25,13 @@
       </a>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" href="/Bootstrap-Portfolio/index.html">About Hayley</a>
+          <a class="nav-link" href="/index.html">About Hayley</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Bootstrap-Portfolio/portfolio.html">Portfolio</a>
+          <a class="nav-link active" href="/portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/Bootstrap-Portfolio/contact.html">Contact</a>
+          <a class="nav-link" href="/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -48,8 +48,8 @@
             <h3 class="text-center">a creatively inclined web designer
               <br>
               <br>
-              <a href="#" class="btn btn-first btn-large shadow">Work's</a>
-              <a href="#" class="btn btn-second btn-large shadow">Connect</a>
+              <a href="/index.html" class="btn btn-first btn-large shadow">About Hayley</a>
+              <a href="/contact.html" class="btn btn-second btn-large shadow">Connect</a>
             </h3>
           </div>
         </div>
@@ -58,27 +58,49 @@
     <!-- PORTFOLIO -->
     <section class="portfolio">
       <div class="row justify-content-md-center">
-        <div class="col-md-10">
+        <div class="col-md-10 justify-content-md-center">
+          <h2>Examples of work I have created</h2>
+          <p> Here will be a showcase of most recent works for both clients and the web development course I am taking through
+            UFT.
+          </p>
           <div class="row justify-content-md-center">
             <!-- CARD 1 -->
             <div class="col-md-3">
-              <div class="card">
-                <img class="card-img-top" src="/Bootstrap-Portfolio/assets/images/Adele-Video-Landing-Series---Mockup.jpg" alt="Card image cap">
+              <div class="card card1">
+                <img class="card-img-top" src="/assets/images/Adele-Video-Landing-Series---Mockup.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Video Landing Page</h5>
+                  <p class="card-text">Adele needed a new landing page for her opt-in video series. This include the main landing page and 3 custom
+                    pages with her videos embedded. She has seen a 40% increate in conversion since the redesign.</p>
+                  <a href="http://videoseries.adelespraggon.com/" class="btn btn-primary">Visit It</a>
                 </div>
               </div>
             </div>
             <!-- CARD 2 -->
             <div class="col-md-3">
-              <div class="card">
-                <img class="card-img-top" src="/Bootstrap-Portfolio/assets/images/Annie-Tulk-Mockup.jpg" alt="Card image cap">
+              <div class="card card2">
+                <img class="card-img-top" src="/assets/images/Annie-Tulk-Mockup.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Website Redesign</h5>
+                  <p class="card-text">Annie was looking for her website to be refreshed. She wanted to overhaul her website and start from scratch.
+                    I built it on Wordpress as she wanted to be able to make edits herself, and she was unable prior.
+
+                  </p>
+                  <a href="http://annietulk.com/" class="btn btn-primary">Visit It</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- CARD 3 -->
+            <div class="col-md-3">
+              <div class="card">
+                <img class="card-img-top" src="/assets/images/New-Copper-Theme.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">HTML Theme</h5>
+                  <p class="card-text">As I continue to learn throughout the course I will be making my own HTML theme. Currently it is built
+                    with HTML and Bootstrap 4. I will add in JavaScript and additional features as the course progresses.
+                  </p>
+                  <a href="https://github.com/CopperCo/CopperAgencyTheme" class="btn btn-primary">GitHub</a>
                 </div>
               </div>
             </div>
