--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/contact.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/contact.html
@@ -59,7 +59,7 @@
     <section class="aboutHayley">
       <div class="container-fluid">
         <div class="row justify-content-md-center">
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-8 col-xs-8">
             <h1>Thank you for stopping by!</h1>
             <p>I would be happy to connect with you. Should you have any quesitons about my work or studies feel free to reach
               out using the contact form below. We can also connect on social media.</p>
@@ -92,7 +92,7 @@
     <section class="contactForm">
       <div class="container-fluid">
         <div class="row justify-content-md-center">
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-8 col-xs-8">
             <div class="form">
               <div class="form-group">
 
@@ -133,10 +133,10 @@
 
 
     <!-- FOOTER -->
-    <section class="footer">
+    <section id="footerSC" class="footer">
       <div class="container-fluid">
         <div class="row justify-content-md-center">
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-10 col-xs-10">
             <div class="row">
               <div class="col-md-6">
                 <ul>
@@ -149,6 +149,9 @@
                   <a href="/contact.html">
                     <li>Contact</li>
                   </a>
+
+
+
                 </ul>
               </div>
               <div class="col-md-6">
