--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/portfolio.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/portfolio.html
@@ -116,10 +116,10 @@
 
 
     <!-- FOOTER -->
-    <section class="footer">
+    <section id="footerSC" class="footer">
       <div class="container-fluid">
         <div class="row justify-content-md-center">
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-10 col-xs-10">
             <div class="row">
               <div class="col-md-6">
                 <ul>
