--- a/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/index.html
+++ b/Activities/Week 2-CSS, Bootstrap/Homework/HK Solved/Bootstrap-Portfolio/index.html
@@ -59,7 +59,7 @@
     <section class="aboutHayley">
       <div class="container-fluid">
         <div class="row justify-content-md-center">
-          <div class="col-md-8">
+          <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
             <h1>It is so nice you're here</h1>
             <div class="row justify-content-md-start">
               <div class="col-md-4">
@@ -84,7 +84,7 @@
     <section class="features">
       <div class="container-fluid">
         <div class="row justify-content-md-center">
-          <div class="col-md-10">
+          <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
             <div class="row">
 
               <div class="feature-card col-md-4 text-center">
@@ -139,10 +139,10 @@
     </section>
 
     <!-- FOOTER -->
-    <section class="footer">
+    <section id="footerSC" class="footer">
       <div class="container-fluid">
         <div class="row justify-content-md-center">
-          <div class="col-md-8">
+          <div class="col-md-8 col-sm-10 col-xs-10">
             <div class="row">
               <div class="col-md-6">
                 <ul>
